<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:id="@+id/menuHome"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24dp"/>

    <item android:id="@+id/menuProfile"
        android:title="@string/profilo"
        android:icon="@drawable/ic_account_circle_black_24dp" />

    <item android:id="@+id/menuGrafico"
        android:title="@string/grafico"
        android:icon="@drawable/pie_chart" />

    <item android:id="@+id/menuNovita"
        android:title="@string/novit"
        android:icon="@drawable/ic_star_black_24dp"/>


    <item android:title="@string/documenti">


        <menu>

            <item android:id="@+id/menuInserisciDoc"
                android:title="@string/inserisci_documenti"
                android:icon="@drawable/ic_cloud_upload_black_24dp" />


            <item android:id="@+id/menuVisualizzaDoc"
                android:title="@string/scarica_documenti"
                android:icon="@drawable/ic_description_black_24dp" />


        </menu>

    </item>


    <item android:title="@string/assistenza">

        <menu>

            <item android:id="@+id/menuIndirizzo"
                android:title="@string/via_gabriele_d_annunzio_24_pescara"
                android:icon="@drawable/position1"/>

            <item android:id="@+id/menuTelefono"
                android:title="@string/_085_377395"
                android:icon="@drawable/icontelephone"/>

            <item android:id="@+id/menuWhatsapp"
                android:title="@string/whatsapp"
                android:icon="@drawable/whatsappbrands01" />

            <item android:id="@+id/menuEmail"
                android:title="@string/info_cofitconsulting_com"
                android:icon="@drawable/ic_email_black_24dp"/>

            <item android:id="@+id/menuFacebook"
                android:title="@string/pagina_facebook"
                android:icon="@drawable/iconfacebook"/>

            <item android:id="@+id/menuWeb"
                android:title="@string/www_cofitconsulting_com"
                android:icon="@drawable/iconweb"/>



        </menu>


    </item>

    <item android:title="@string/link_utili">

        <menu>

        <item android:id="@+id/menuEntrate"
            android:title="@string/agenzia_delle_entrate"
            android:icon="@drawable/agenziaentrate"/>

            <item android:id="@+id/menuRiscossione"
                android:title="@string/agenzia_entrate_riscossione"
                android:icon="@drawable/agenziariscossione"/>

            <item android:id="@+id/menuInps"
                android:title="@string/inps"
                android:icon="@drawable/inps"/>

            <item android:id="@+id/menuInail"
                android:title="@string/inail"
                android:icon="@drawable/inail"/>

            <item android:id="@+id/menuCciaa"
                android:title="@string/camera_di_commercio_pescara"
                android:icon="@drawable/camera"/>


        </menu>


    </item>

    <item android:title="@string/informazioni">
        <menu>

            <item android:id="@+id/menuInfo"
                android:title="@string/termini_e_condizioni"
                android:icon="@drawable/ic_info_black_24dp"/>

        </menu>

    </item>

    <item android:title=" ">
        <menu>

            <item android:id="@+id/menuEsci"
                android:title="@string/esci"
                android:icon="@drawable/ic_exit_to_app_black_24dp"/>

        </menu>

    </item>

</menu>